--- a/styles/style.css
+++ b/styles/style.css
@@ -1,54 +1,53 @@
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-    font-size: 2em;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  font-size: 2em;
 }
 
 /* Tema claro (activo por defecto) */
 body.light-theme {
-    background: linear-gradient(90deg, #9EA4AD, #dad8d8, #9EA4AD);
-
+  background: linear-gradient(90deg, #9ea4ad, #dad8d8, #9ea4ad);
 }
 
 /* Tema oscuro */
 body.dark-theme {
-    background: linear-gradient(90deg, #1c2c3b, #364050, #1c2c3b);
+  background: linear-gradient(90deg, #1c2c3b, #364050, #1c2c3b);
 }
 
 header {
-    margin: 0;
-    margin-top:2em;
-    background-color: transparent;
-    height: 4em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    z-index: 100;
+  margin: 0;
+  margin-top: 2em;
+  background-color: transparent;
+  height: 4em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  z-index: 100;
 }
 
 .nav-list {
-    list-style: none;
-    display: flex;
-    gap: 10px;
-    padding: 0;
-    margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 10px;
+  padding: 0;
+  margin: 0;
 }
 
 .navbar {
-    justify-content: space-around;
-    display: flex;
-    align-items: center;
-    padding: 1em;
-    width: 100%;
+  justify-content: space-around;
+  display: flex;
+  align-items: center;
+  padding: 1em;
+  width: 100%;
 }
 .text-nav-light {
   color: black;
   padding: 0 1rem 0 1rem;
 }
-.text-nav{
+.text-nav {
   margin: 0 2rem 0 2rem;
 }
 .text-nav-dark {
@@ -57,131 +56,131 @@ header {
 }
 
 .header-container {
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    align-items: center;
-    width: 100%;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  width: 100%;
 }
 
 .column-1 {
-    grid-column: 1;
-    font-size: 2em;
-    display: flex;
-    justify-content: center;
+  grid-column: 1;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
 }
 
 .select-nav {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .column-3 {
-    grid-column: 3;
-    font-size: 2em;
-    display: flex;
-    justify-content: center;
+  grid-column: 3;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
 }
 
 /* Theme Switch */
 .switch {
-    font-size: 17px;
-    position: relative;
-    display: inline-block;
-    width: 4em;
-    height: 2.2em;
-    border-radius: 30px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #2a2a2a;
-    transition: 0.4s;
-    border-radius: 30px;
-    overflow: hidden;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 1.2em;
-    width: 1.2em;
-    border-radius: 20px;
-    left: 0.5em;
-    bottom: 0.5em;
-    transition: 0.4s;
-    transition-timing-function: cubic-bezier(0.81, -0.04, 0.38, 1.5);
-    box-shadow: inset 8px -4px 0px 0px #fff;
-  }
-  
-  .switch input:checked + .slider {
-    background-color: #00a6ff;
-  }
-  
-  .switch input:checked + .slider:before {
-    transform: translateX(1.8em);
-    box-shadow: inset 15px -4px 0px 15px #ffcf48;
-  }
-  
-  .star {
-    background-color: #fff;
-    border-radius: 50%;
-    position: absolute;
-    width: 5px;
-    transition: all 0.4s;
-    height: 5px;
-  }
-  
-  .star_1 {
-    left: 2.5em;
-    top: 0.5em;
-  }
-  
-  .star_2 {
-    left: 2.2em;
-    top: 1.2em;
-  }
-  
-  .star_3 {
-    left: 3em;
-    top: 0.9em;
-  }
-  
-  .switch input:checked ~ .slider .star {
-    opacity: 0;
-  }
-  
-  .cloud {
-    width: 3.5em;
-    position: absolute;
-    bottom: -1.4em;
-    left: -1.1em;
-    opacity: 0;
-    transition: all 0.4s;
-  }
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 4em;
+  height: 2.2em;
+  border-radius: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
-  .switch input:checked ~ .slider .cloud {
-    opacity: 1;
-  }
-.img-yo{
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2a2a2a;
+  transition: 0.4s;
+  border-radius: 30px;
+  overflow: hidden;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 1.2em;
+  width: 1.2em;
+  border-radius: 20px;
+  left: 0.5em;
+  bottom: 0.5em;
+  transition: 0.4s;
+  transition-timing-function: cubic-bezier(0.81, -0.04, 0.38, 1.5);
+  box-shadow: inset 8px -4px 0px 0px #fff;
+}
+
+.switch input:checked + .slider {
+  background-color: #00a6ff;
+}
+
+.switch input:checked + .slider:before {
+  transform: translateX(1.8em);
+  box-shadow: inset 15px -4px 0px 15px #ffcf48;
+}
+
+.star {
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  width: 5px;
+  transition: all 0.4s;
+  height: 5px;
+}
+
+.star_1 {
+  left: 2.5em;
+  top: 0.5em;
+}
+
+.star_2 {
+  left: 2.2em;
+  top: 1.2em;
+}
+
+.star_3 {
+  left: 3em;
+  top: 0.9em;
+}
+
+.switch input:checked ~ .slider .star {
+  opacity: 0;
+}
+
+.cloud {
+  width: 3.5em;
+  position: absolute;
+  bottom: -1.4em;
+  left: -1.1em;
+  opacity: 0;
+  transition: all 0.4s;
+}
+
+.switch input:checked ~ .slider .cloud {
+  opacity: 1;
+}
+.img-yo {
   width: 20rem;
 }
-.img-ar{
+.img-ar {
   width: 50px;
 }
-.figure-nav{
+.figure-nav {
   margin: 0;
 }
 .carousel-item img {
@@ -189,7 +188,7 @@ header {
   margin: 0 auto 9rem auto; /* Centra la imagen horizontalmente */
 }
 
-.custom-animated-btn.button { 
+.custom-animated-btn.button {
   height: 50px;
   width: 150px;
   border: none;
@@ -201,7 +200,7 @@ header {
 }
 
 .custom-animated-btn.button:hover {
-  box-shadow: .5px .5px 150px #252525;
+  box-shadow: 0.5px 0.5px 150px #252525;
 }
 
 .custom-animated-btn-light.type1::after {
@@ -223,7 +222,6 @@ header {
 }
 
 .custom-animated-btn-light.type1::before {
-  
   height: 50px;
   width: 150px;
   background-color: #000000;
@@ -239,10 +237,10 @@ header {
   justify-content: center;
   transition: all 0.5s ease-in-out;
 }
-.custom-animated-btn-light.type1.btn-cv::before{
+.custom-animated-btn-light.type1.btn-cv::before {
   content: "CV";
 }
-.custom-animated-btn-light.type1.btn-info::before{
+.custom-animated-btn-light.type1.btn-info::before {
   content: "CONTACTO";
 }
 
@@ -288,11 +286,11 @@ header {
   justify-content: center;
   transition: all 0.5s ease-in-out;
 }
-.custom-animated-btn-dark.type1.btn-cv::before{
-  content: 'CV';
+.custom-animated-btn-dark.type1.btn-cv::before {
+  content: "CV";
 }
-.custom-animated-btn-dark.type1.btn-info::before{
-  content: 'INFO';
+.custom-animated-btn-dark.type1.btn-info::before {
+  content: "CONTACTO";
 }
 .card {
   font-family: Montserrat, sans-serif;
@@ -302,11 +300,11 @@ header {
   overflow: hidden;
   transition: all 0.3s ease;
 }
-.card-light{
+.card-light {
   border: 3px solid #000000;
   box-shadow: 12px 12px 0 #000000;
 }
-.card-dark{
+.card-dark {
   border: 3px solid #000000;
   box-shadow: 12px 12px 0 #000000;
 }
@@ -317,15 +315,14 @@ header {
   font-weight: 900;
   width: 100%;
   height: 32px;
-
 }
-.head-light{
+.head-light {
   background: #b6b6b6;
   padding: 5px 12px;
   color: #fbfbfb;
   border-bottom: 3px solid #000000;
 }
-.head-dark{
+.head-dark {
   background: #dddddd;
   padding: 5px 12px;
   color: #ffffff;
@@ -335,13 +332,13 @@ header {
   padding: 8px 12px;
   font-size: 14px;
   font-weight: 600;
-  background: #507A86;
+  background: #507a86;
 }
-.content-light{
-  background: #507A86;
+.content-light {
+  background: #507a86;
 }
-.content-dark{
-  background: #11222C;
+.content-dark {
+  background: #11222c;
 }
 
 .card-light:hover {
@@ -352,15 +349,15 @@ header {
   transform: translate(-6px, -6px); /* Corrected the property here */
   box-shadow: 16px 16px 0 #000000; /* Optional: added an effect on hover */
 }
-.title-form{
+.title-form {
   font: 2rem;
-  font-weight:400 ;
+  font-weight: 400;
   text-align: center;
 }
-.lable-text{
+.lable-text {
   margin: 20px 0 2px;
 }
-.input{
+.input {
   width: calc(100% - 30px);
   padding: 5px;
   border: 1px solid #000;
