--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,16 +4,16 @@
 
 @media (max-width: 768px) {
     .custom-footer {
-        margin-top: 3rem; /* Reduce el margen en dispositivos móviles */
+        margin-top: 3rem; 
     }
 
     .custom-footer .d-flex {
-        flex-wrap: wrap; /* Asegura que los íconos se ajusten bien */
+        flex-wrap: wrap; 
         justify-content: center;
     }
 
     .custom-footer a {
-        margin: 0.5rem; /* Espaciado uniforme en íconos */
+        margin: 0.5rem; 
     }
 }
 @media (max-width: 767.98px) {
